Small fix to z-index
Made the powerup timer and live survival timer have a higher z-index than everything else. This is so things such as obstacles or the player don't cover it.

--- a/styles/scss/game.scss
+++ b/styles/scss/game.scss
@@ -131,6 +131,7 @@
     position: absolute;
     top: 90%;
     left: 2.5%;
+    z-index: 5;
 }
 .dupe {
     background-image: radial-gradient(white, blue);
@@ -167,6 +168,7 @@
     position: absolute;
     top: 90%;
     left: 82.5%;
+    z-index: 5;
     visibility: hidden;
     opacity: 0;
 }
